--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
-        <p class="view"><a href="pages/projects/projects_index.md">Projects</a></p>
+        <p class="view"><a href="pages/projects/projects_index.html">Projects</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
