--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 
         <p class="view"><a href="/pages/blog/">Blog</a></p>
         <p class="view"><a href="/pages/projects/projects_index.html">Projects</a></p>
-        <p class="view"><a href="/pages/books/">Reading List and Book Reviews</a></p>
+        <p class="view"><a href="https://www.goodreads.com/user/show/139515600-cole-strickler">Reading List and Book Reviews</a></p>
         {% if site.show_downloads %}
         {% endif %}
       </header>
